[gd_scene load_steps=13 format=3 uid="uid://d3vlw6flqmvnm"]

[ext_resource type="Texture2D" uid="uid://ds4dde0m7bryx" path="res://assets/cc_title.png" id="1_ag6p3"]
[ext_resource type="Script" path="res://resources/ui/welcome_screen/welcome_screen.gd" id="1_p4sks"]
[ext_resource type="AudioStream" uid="uid://7jrb6t2jeums" path="res://assets/audio/UI_Quirky20.wav" id="3_vooac"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwuwj"]
bg_color = Color(0.615686, 0.572549, 0.337255, 0.819608)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.843137, 0.784314, 0.505882, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ueibt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j0plw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k1wmg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jsiuj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lp2kj"]

[sub_resource type="Animation" id="Animation_yd5hu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(570, 300)]
}

[sub_resource type="Animation" id="Animation_npj2s"]
resource_name = "appear"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(570, 400), Vector2(570, 300)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextureRect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(501.5, 171), Vector2(501.5, 259)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wtv1f"]
_data = {
"RESET": SubResource("Animation_yd5hu"),
"appear": SubResource("Animation_npj2s")
}

[node name="WelcomeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_p4sks")

[node name="Menu" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -600.0
offset_right = 150.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qwuwj")
metadata/_edit_layout_mode = 1

[node name="Margin" type="MarginContainer" parent="Menu"]
offset_left = 3.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 297.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Buttons" type="VBoxContainer" parent="Menu/Margin"]
offset_left = 10.0
offset_top = 10.0
offset_right = 284.0
offset_bottom = 284.0
theme_override_constants/separation = 16
alignment = 1

[node name="PlayButton" type="Button" parent="Menu/Margin/Buttons"]
offset_top = 64.0
offset_right = 274.0
offset_bottom = 113.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.980392, 0.901961, 0.576471, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_ueibt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j0plw")
text = "PLAY"

[node name="QuitButton" type="Button" parent="Menu/Margin/Buttons"]
offset_top = 129.0
offset_right = 274.0
offset_bottom = 171.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.956863, 0.878431, 0.584314, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_k1wmg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jsiuj")
text = "QUIT"

[node name="CreditsButton" type="Button" parent="Menu/Margin/Buttons"]
offset_top = 187.0
offset_right = 274.0
offset_bottom = 210.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_lp2kj")
text = "Credits"
metadata/_edit_layout_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -191.0
offset_right = 218.5
offset_bottom = -112.548
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ag6p3")
metadata/_edit_layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wtv1f")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vooac")

[connection signal="pressed" from="Menu/Margin/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menu/Margin/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Menu/Margin/Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
